--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
                 <div class="user-nav__user">
                     <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
                     <span class="user-nav__user-name">Jonas</span>
+                    <div class="user-nav__dropdown">
+                        <ul class="user-nav__menu">
+                            <li class="user-nav__menu-item">
+                                <a href="#/" class="user-nav__link">
+                                    <svg class="user-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-home"></use>
+                                    </svg>
+                                    <span>Link 1</span>
+                                </a>
+                            </li>
+                            <li class="user-nav__menu-item">
+                                <a href="#/" class="user-nav__link">
+                                    <svg class="user-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-home"></use>
+                                    </svg>
+                                    <span>Link 1</span>
+                                </a>
+                            </li>
+                            <li class="user-nav__menu-item">
+                                <a href="#/" class="user-nav__link">
+                                    <svg class="user-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-home"></use>
+                                    </svg>
+                                    <span>Link 1</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </header>
